--- a/sass/views/_comments.scss
+++ b/sass/views/_comments.scss
@@ -190,8 +190,8 @@
     overflow: hidden;
 
     @media (max-width: $article-max-width + 40px) {
-      margin-left: 2rem;
-      margin-right: 2rem;
+      margin-left: 0;
+      margin-right: 0;
 
       input {
         padding-left: 0;
